
  - Add a Prepend() method to Environments, to append values to
    the beginning of construction variables.

 From Steven Knight:

 - Add Repository() functionality.

 - Fix auto-deduction of target names so that deduced targets end
   up in the same subdirectory as the source.

 - Don't remove source files specified on the command line!

 - Suport the Intel Fortran Compiler (ifl.exe).

 From Anthony Roach:

 - Fixed use of command lines with spaces in their arguments,
   and use of Nodes with spaces in their string representation.

 - Make access and modification times of files in a BuildDir match
   the source file, even when hard linking isn't available.

 - Make -U be case insensitive on Win32 systems.

 - Issue a warning and continue when finding a corrupt .sconsign file.

 - Fix using an alias as a dependency of a target so that if one of the
   alias' dependencies gets rebuilt, the resulting target will, too.

 - Fix differently ordered targets causing unnecessary rebuilds
   on case insensitive systems.

 - Use os.system() to execute external commands whenever the "env"
   utility is available, which is much faster than fork()/exec(),
   and fixes the -j option on several platforms.

  From sam th:

  - Dynamically check for the existence of utilities with which to
    initialize Environments by default.



RELEASE 0.08 - Mon, 15 Jul 2002 12:08:51 -0500

  From Charles Crain:

  - Fixed a bug with relative CPPPATH dirs when using BuildDir().
    (Bug reported by Bob Summerwill.)

  - Added a warnings framework and a --warn option to enable or
    disable warnings.

  - Make the C scanner warn users if files referenced by #include
    directives cannot be found and --warn=dependency is specified.

  - The BUILDERS construction variable should now be a dictionary
    that maps builder names to actions.  Existing uses of lists,
    and the Builder name= keyword argument, generate warnings
    about use of deprecated features.
