@@ -51,10 +51,11 @@ import bar
 print bar.variable
 """)
 
-test.run(arguments = '-I sub1 -I sub2', stdout = "sub1/foo\nsub2/bar\n")
+test.run(arguments = '-I sub1 -I sub2 .',
+         stdout = 'sub1/foo\nsub2/bar\nscons: "." is up to date.\n')
 
-test.run(arguments = '--include-dir=sub2 --include-dir=sub1',
-	 stdout = "sub2/foo\nsub2/bar\n")
+test.run(arguments = '--include-dir=sub2 --include-dir=sub1 .',
+	 stdout = 'sub2/foo\nsub2/bar\nscons: "." is up to date.\n')
 
 test.pass_test()
  
