@@ -32,12 +32,12 @@ test = TestSCons.TestSCons()
 
 test.write('SConstruct', "")
 
-test.run(arguments = '-S', stderr = "Warning:  ignoring -S option\n")
+test.run(arguments = '-S .', stderr = "Warning:  ignoring -S option\n")
 
-test.run(arguments = '--no-keep-going',
+test.run(arguments = '--no-keep-going .',
 	 stderr = "Warning:  ignoring --no-keep-going option\n")
 
-test.run(arguments = '--stop', stderr = "Warning:  ignoring --stop option\n")
+test.run(arguments = '--stop .', stderr = "Warning:  ignoring --stop option\n")
 
 test.pass_test()
  
