@@ -32,16 +32,16 @@ test = TestSCons.TestSCons()
 
 test.write('SConstruct', "")
 
-test.run(arguments = '-W foo',
+test.run(arguments = '-W foo .',
 	 stderr = "Warning:  the -W option is not yet implemented\n")
 
-test.run(arguments = '--what-if=foo',
+test.run(arguments = '--what-if=foo .',
 	 stderr = "Warning:  the --what-if option is not yet implemented\n")
 
-test.run(arguments = '--new-file=foo',
+test.run(arguments = '--new-file=foo .',
 	 stderr = "Warning:  the --new-file option is not yet implemented\n")
 
-test.run(arguments = '--assume-new=foo',
+test.run(arguments = '--assume-new=foo .',
 	 stderr = "Warning:  the --assume-new option is not yet implemented\n")
 
 test.pass_test()
