@@ -32,7 +32,7 @@ test = TestSCons.TestSCons()
 
 test.write('SConstruct', "")
 
-test.run(arguments = '--list-derived',
+test.run(arguments = '--list-derived .',
 	 stderr = "Warning:  the --list-derived option is not yet implemented\n")
 
 test.pass_test()
