@@ -32,7 +32,7 @@ test = TestSCons.TestSCons()
 
 test.write('SConstruct', "")
 
-test.run(arguments = '--list-where',
+test.run(arguments = '--list-where .',
 	 stderr = "Warning:  the --list-where option is not yet implemented\n")
 
 test.pass_test()
