@@ -32,7 +32,7 @@ test = TestSCons.TestSCons()
 
 test.write('SConstruct', "")
 
-test.run(arguments = '-b',
+test.run(arguments = '-b .',
 	 stderr = "Warning:  ignoring -b option\n")
 
 test.pass_test()
