@@ -32,13 +32,13 @@ test = TestSCons.TestSCons()
 
 test.write('SConstruct', "")
 
-test.run(arguments = '-o foo',
+test.run(arguments = '-o foo .',
 	 stderr = "Warning:  the -o option is not yet implemented\n")
 
-test.run(arguments = '--old-file=foo',
+test.run(arguments = '--old-file=foo .',
 	 stderr = "Warning:  the --old-file option is not yet implemented\n")
 
-test.run(arguments = '--assume-old=foo',
+test.run(arguments = '--assume-old=foo .',
 	 stderr = "Warning:  the --assume-old option is not yet implemented\n")
 
 test.pass_test()
