@@ -32,10 +32,10 @@ test = TestSCons.TestSCons()
 
 test.write('SConstruct', "")
 
-test.run(arguments = '-w',
+test.run(arguments = '-w .',
 	 stderr = "Warning:  the -w option is not yet implemented\n")
 
-test.run(arguments = '--print-directory',
+test.run(arguments = '--print-directory .',
 	 stderr = "Warning:  the --print-directory option is not yet implemented\n")
 
 test.pass_test()
